[package]
name = "simu"
version = "0.1.0"
edition = "2021"
rust-version = "1.57.0"

[dependencies]
bytes = "1.1"
bincode = "1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [ "sync", "rt" ] }
tokio-stream = "0.1"
actix-web = "4"
actix-web-httpauth = "0.6"
handlebars = { version = "4.2", features = ["dir_source"] }
pam = "0.7"
tracing = "^0.1"
tracing-subscriber = "^0.2"
libc = "^0.2"
lazy_static = "1.4"

[profile.release-lto]
inherits = "release"
lto = true

[features]
root-safeguard = []

default = ["root-safeguard"]
